Visualização dos dados

--- a/Mini Weka.ipynb
+++ b/Mini Weka.ipynb
@@ -701,7 +701,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Apesar da visualisação simplória apresentada acima, é o suficiente para observar de forma tímida como e quanto os atributos infuenciam a classe alvo"
+    "Apesar da visualisação simples apresentada acima, é o suficiente para observar de forma tímida como e quanto os atributos infuenciam a classe alvo"
    ]
   },
   {
