Modelo probabilístico Naive Bayes

--- a/Mini Weka.ipynb
+++ b/Mini Weka.ipynb
@@ -49,13 +49,12 @@
     "\n",
     "## Base de dados\n",
     "Para testar e validar nossos modelos, usaremos duas bases de dados, a primeira com atributos numéricos e a segunda com atributos nominais. Ambas as bases terão duas versões, uma completa e a segunda com alguns atributos com valores faltando, para que possam ser tratados no preprocessamento e simular melhor dados brutos encontrados no mundo real.\n",
-    "\n",
     "Ambas as bases e outras mais podem ser encontradas no [Weka Data Sets](https://storm.cis.fordham.edu/~gweiss/data-mining/datasets.html)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,6 +701,132 @@
    "metadata": {},
    "source": [
     "Apesar da visualisação simples apresentada acima, é o suficiente para observar de forma tímida como e quanto os atributos infuenciam a classe alvo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Modelo probabilístico Naive Bayes<a name=\"modelo-probabilístico-naive-bayes\"></a>\n",
+    "\n",
+    "O Naive Bayes é um classificador probabilístico simples baseado no teorema de Bayes. O teorema de Bayes descreve a probabilidade de um evento, com base no conhecimento prévio de condições que podem estar relacionadas ao evento. Por exemplo, se o alzheimer está relacionado à idade, então, usando o teorema de Bayes, a idade de uma pessoa pode ser usada para avaliar com mais precisão a probabilidade de alzheimer, comparada com a avaliação da probabilidade sem conhecimento da idade da pessoa.\n",
+    "\n",
+    "O teorema de Bayes é declarado matematicamente como a seguinte equação:\n",
+    "\n",
+    "$$\n",
+    "    P(A\\mid B) = \\frac{P(B\\mid A)P(A)}{P(B)}\n",
+    "$$\n",
+    "\n",
+    "onde $A$ e $B$ são eventos e $P(B)\\neq 0$.\n",
+    "- $P(A\\mid B)$  é uma probabilidade condicional: a probabilidade do evento $A$ ocorrer dado que $B$ é verdadeiro.\n",
+    "- $P(B\\mid A)$ também é uma probabilidade condicional: a probabilidade de evento $B$ ocorrer dado que $A$ é verdadeiro.\n",
+    "- $P(A)$ e $P(B)$ são as probabilidades de observar $A$ e $B$ independentemente uns dos outros; isso é conhecido como a probabilidade marginal.\n",
+    "\n",
+    "Este indutor é chamado de ingênuo pois assume que todos os atributos são independentes entre si:\n",
+    "\n",
+    "$$\n",
+    "    f_{nb}(X) = argmax_{c_{j} \\in \\Omega} = \\begin{Bmatrix} p(c_{j})\\prod_{i=1}^{M}p(x_{i}\\mid c_{j})\\end{Bmatrix}\n",
+    "$$\n",
+    "\n",
+    "Os parâmetros do modelo são simplesmente as probabilidades posteriores $p(x_{i}\\mid c_{j})$ e as\n",
+    "probabilidades a priori $p(c_{j})$:\n",
+    "- Treinamento: calcular e armazenar os valores de probabilidades\n",
+    "- Classificação de um novo exemplo: calcular as probabilidades para os atributos e classes relevante e escolher o argumento (classe) que maximiza a probabilidade posterior"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NaiveBayesClassifier(object):\n",
+    "\n",
+    "    def transformContinuousFeatures(self, X):\n",
+    "        continuousFeatures = self.getContinuousFeatures(X[0])\n",
+    "        \n",
+    "        for index in range(self.features):\n",
+    "            if(continuousFeatures[index]):\n",
+    "                samples = np.array(list(map(lambda x: float(x),X[:,index])))\n",
+    "                \n",
+    "                if(self.featureBins[index]==False):\n",
+    "                    self.featureBins[index] = bins = [-np.Inf, np.percentile(samples, 25) - 0.001, np.percentile(samples, 50), np.percentile(samples, 75) + 0.001, np.Inf]\n",
+    "                else:\n",
+    "                    bins = self.featureBins[index]\n",
+    "                print(bins)\n",
+    "                samples = np.array(pd.cut(samples,\n",
+    "                     bins=bins,\n",
+    "                     labels=[\"0\", \"1\", \"2\", \"3\"]))\n",
+    "                \n",
+    "                X[:, index] = samples\n",
+    "        return X\n",
+    "    \n",
+    "    def getContinuousFeatures(self, sample):\n",
+    "        continuousFeatures = []\n",
+    "        \n",
+    "        for feature in sample:\n",
+    "            try:\n",
+    "                float(feature)\n",
+    "                continuousFeatures.append(True)\n",
+    "            except ValueError:\n",
+    "                continuousFeatures.append(False)\n",
+    "        \n",
+    "        return continuousFeatures\n",
+    "\n",
+    "    def fit(self, X,y):\n",
+    "        size, self.features = X.shape\n",
+    "        self.featureBins = [False for i in range(self.features)]\n",
+    "        \n",
+    "        X = self.transformContinuousFeatures(X)\n",
+    "\n",
+    "        targets = np.unique(y)\n",
+    "        samplesByClass = {\n",
+    "            c:X[y==c] for c in targets\n",
+    "        }\n",
+    "        probabilities = {\n",
+    "            c:[\n",
+    "                len(y[y==c])/len(y)\n",
+    "            ] for c in targets\n",
+    "        }\n",
+    "        \n",
+    "        for c in probabilities:\n",
+    "            \n",
+    "            for i in range(self.features):\n",
+    "                \n",
+    "                x = samplesByClass[c][:,i]\n",
+    "                \n",
+    "                if self.featureBins[i]==False: labels = np.unique(X[:,i])\n",
+    "                else: labels = ['0', '1', '2', '3']\n",
+    "                    \n",
+    "                probabilities[c].append(\n",
+    "                     {l:len(x[x==l])/len(x) for l in labels}\n",
+    "                )\n",
+    "        self.probabilities = probabilities\n",
+    "                \n",
+    "    def predict(self, X):\n",
+    "        size, features = X.shape\n",
+    "        \n",
+    "        X = self.transformContinuousFeatures(X)\n",
+    "        \n",
+    "        pred = []\n",
+    "        \n",
+    "        for x in X:\n",
+    "            probs = {}\n",
+    "            maxProb = 0\n",
+    "            maxProbKey = ''\n",
+    "            for c in self.probabilities:\n",
+    "                P = self.probabilities[c]\n",
+    "                prob = 1\n",
+    "                for p in [ P[i] if i==0 else P[i][x[i-1]]for i in range(len(P))]:\n",
+    "                    prob = prob*p\n",
+    "                probs[c] = prob\n",
+    "                if prob > maxProb: \n",
+    "                    maxProb = prob\n",
+    "                    maxProbKey = c\n",
+    "\n",
+    "            pred.append(maxProbKey)\n",
+    "            \n",
+    "        return pred"
    ]
   },
   {
