--- a/Mini Weka.ipynb
+++ b/Mini Weka.ipynb
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
        "\tplay's type is nominal, range is ('yes', 'no')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -378,11 +378,19 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>b'sunny'</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>95.0</td>\n",
+       "      <th>3</th>\n",
+       "      <td>b'rainy'</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>96.0</td>\n",
        "      <td>b'FALSE'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>b'rainy'</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>b'TRUE'</td>\n",
        "      <td>b'no'</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -394,11 +402,11 @@
        "      <td>b'yes'</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>6</th>\n",
        "      <td>b'overcast'</td>\n",
-       "      <td>83.0</td>\n",
-       "      <td>86.0</td>\n",
-       "      <td>b'FALSE'</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>b'TRUE'</td>\n",
        "      <td>b'yes'</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -409,28 +417,20 @@
        "      <td>b'FALSE'</td>\n",
        "      <td>b'yes'</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>b'sunny'</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>b'TRUE'</td>\n",
-       "      <td>b'no'</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "        outlook  temperature  humidity     windy    play\n",
-       "7      b'sunny'         72.0      95.0  b'FALSE'   b'no'\n",
+       "3      b'rainy'         70.0      96.0  b'FALSE'  b'yes'\n",
+       "13     b'rainy'         71.0      91.0   b'TRUE'   b'no'\n",
        "10     b'sunny'         75.0      70.0   b'TRUE'  b'yes'\n",
-       "2   b'overcast'         83.0      86.0  b'FALSE'  b'yes'\n",
-       "9      b'rainy'         75.0      80.0  b'FALSE'  b'yes'\n",
-       "1      b'sunny'         80.0      90.0   b'TRUE'   b'no'"
+       "6   b'overcast'         64.0      65.0   b'TRUE'  b'yes'\n",
+       "9      b'rainy'         75.0      80.0  b'FALSE'  b'yes'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -489,11 +489,27 @@
        "      <td>no</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>sunny</td>\n",
-       "      <td>69.0</td>\n",
-       "      <td>70.0</td>\n",
+       "      <th>13</th>\n",
+       "      <td>rainy</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>overcast</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>75.0</td>\n",
        "      <td>False</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>overcast</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>True</td>\n",
        "      <td>yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -504,36 +520,20 @@
        "      <td>False</td>\n",
        "      <td>yes</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>overcast</td>\n",
-       "      <td>64.0</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>rainy</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    outlook  temperature  humidity  windy play\n",
-       "5     rainy         65.0      70.0   True   no\n",
-       "8     sunny         69.0      70.0  False  yes\n",
-       "3     rainy         70.0      96.0  False  yes\n",
-       "6  overcast         64.0      65.0   True  yes\n",
-       "4     rainy         68.0      80.0  False  yes"
+       "     outlook  temperature  humidity  windy play\n",
+       "5      rainy         65.0      70.0   True   no\n",
+       "13     rainy         71.0      91.0   True   no\n",
+       "12  overcast         81.0      75.0  False  yes\n",
+       "11  overcast         72.0      90.0   True  yes\n",
+       "3      rainy         70.0      96.0  False  yes"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 252,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 517,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,10 +750,9 @@
     "                samples = np.array(list(map(lambda x: float(x),X[:,index])))\n",
     "                \n",
     "                if(self.featureBins[index]==False):\n",
-    "                    self.featureBins[index] = bins = [-np.Inf, np.percentile(samples, 25) - 0.001, np.percentile(samples, 50), np.percentile(samples, 75) + 0.001, np.Inf]\n",
+    "                    self.featureBins[index] = bins = [-np.Inf, np.min(samples)+(np.mean(samples)-np.min(samples))/2, np.mean(samples), np.max(samples) - (np.mean(samples)-np.min(samples))/2, np.Inf]\n",
     "                else:\n",
     "                    bins = self.featureBins[index]\n",
-    "                print(bins)\n",
     "                samples = np.array(pd.cut(samples,\n",
     "                     bins=bins,\n",
     "                     labels=[\"0\", \"1\", \"2\", \"3\"]))\n",
@@ -765,27 +764,48 @@
     "        continuousFeatures = []\n",
     "        \n",
     "        for feature in sample:\n",
-    "            try:\n",
-    "                float(feature)\n",
-    "                continuousFeatures.append(True)\n",
-    "            except ValueError:\n",
-    "                continuousFeatures.append(False)\n",
-    "        \n",
+    "            continuousFeatures.append(not str(feature).isalpha())\n",
+    "                \n",
     "        return continuousFeatures\n",
+    "    \n",
+    "    def dropNums(self, X):\n",
+    "        x = X\n",
+    "        X = []\n",
+    "        c = 0\n",
+    "        featureBins = list(self.featureBins)\n",
+    "        for i in range(self.features):\n",
+    "            if featureBins[i-c]==False:\n",
+    "                X.append(x[:,i])\n",
+    "            else:\n",
+    "                del featureBins[i-c]\n",
+    "                c+=1\n",
+    "        return np.array(X).T, featureBins\n",
+    "    \n",
+    "    def P(self, x,y):\n",
+    "        return len(x)/len(y)\n",
     "\n",
-    "    def fit(self, X,y):\n",
+    "    def fit(self, X,y, dropNums=False):\n",
     "        size, self.features = X.shape\n",
     "        self.featureBins = [False for i in range(self.features)]\n",
+    "        self.dropNumsValue = dropNums\n",
     "        \n",
-    "        X = self.transformContinuousFeatures(X)\n",
-    "\n",
+    "        P = self.P\n",
+    "        \n",
+    "        Xtrain = self.transformContinuousFeatures(np.array(X))\n",
+    "        \n",
+    "        if(dropNums):\n",
+    "            Xtrain, featureBins = self.dropNums(Xtrain)\n",
+    "            self.features = Xtrain.shape[1]\n",
+    "        else: featureBins = self.featureBins\n",
+    "            \n",
     "        targets = np.unique(y)\n",
+    "        \n",
     "        samplesByClass = {\n",
-    "            c:X[y==c] for c in targets\n",
+    "            c:Xtrain[y==c] for c in targets\n",
     "        }\n",
     "        probabilities = {\n",
     "            c:[\n",
-    "                len(y[y==c])/len(y)\n",
+    "                P(y[y==c],y)\n",
     "            ] for c in targets\n",
     "        }\n",
     "        \n",
@@ -794,23 +814,26 @@
     "            for i in range(self.features):\n",
     "                \n",
     "                x = samplesByClass[c][:,i]\n",
-    "                \n",
-    "                if self.featureBins[i]==False: labels = np.unique(X[:,i])\n",
+    "                if featureBins[i]==False: labels = np.unique(Xtrain[:,i])\n",
     "                else: labels = ['0', '1', '2', '3']\n",
-    "                    \n",
     "                probabilities[c].append(\n",
-    "                     {l:len(x[x==l])/len(x) for l in labels}\n",
+    "                     {l:P(x[x==l],x) for l in labels}\n",
     "                )\n",
     "        self.probabilities = probabilities\n",
     "                \n",
     "    def predict(self, X):\n",
-    "        size, features = X.shape\n",
-    "        \n",
-    "        X = self.transformContinuousFeatures(X)\n",
-    "        \n",
+    "        size, self.features = X.shape\n",
+    "         \n",
+    "        Xtest = self.transformContinuousFeatures(np.array(X))\n",
+    "       \n",
+    "        if(self.dropNumsValue):\n",
+    "            Xtest, featureBins = self.dropNums(Xtest)\n",
+    "            self.features = Xtest.shape[1]\n",
+    "        else: featureBins = self.featureBins\n",
+    "            \n",
     "        pred = []\n",
     "        \n",
-    "        for x in X:\n",
+    "        for x in Xtest:\n",
     "            probs = {}\n",
     "            maxProb = 0\n",
     "            maxProbKey = ''\n",
@@ -818,12 +841,12 @@
     "                P = self.probabilities[c]\n",
     "                prob = 1\n",
     "                for p in [ P[i] if i==0 else P[i][x[i-1]]for i in range(len(P))]:\n",
-    "                    prob = prob*p\n",
+    "                    if(p!=0):\n",
+    "                        prob = prob*p\n",
     "                probs[c] = prob\n",
     "                if prob > maxProb: \n",
     "                    maxProb = prob\n",
     "                    maxProbKey = c\n",
-    "\n",
     "            pred.append(maxProbKey)\n",
     "            \n",
     "        return pred"
