Modelo probabilístico Naive Bayes

--- a/Mini Weka.ipynb
+++ b/Mini Weka.ipynb
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 517,
+   "execution_count": 554,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,12 +750,21 @@
     "                samples = np.array(list(map(lambda x: float(x),X[:,index])))\n",
     "                \n",
     "                if(self.featureBins[index]==False):\n",
-    "                    self.featureBins[index] = bins = [-np.Inf, np.min(samples)+(np.mean(samples)-np.min(samples))/2, np.mean(samples), np.max(samples) - (np.mean(samples)-np.min(samples))/2, np.Inf]\n",
+    "                    \n",
+    "                    _min = np.min(samples)\n",
+    "                    _frac = (np.max(samples)-np.min(samples))/9\n",
+    "                    bins = [-np.Inf]\n",
+    "                    \n",
+    "                    for i in range(9):\n",
+    "                        bins.append(_min+i*_frac)\n",
+    "                    bins.append(np.Inf)\n",
+    "                    \n",
+    "                    self.featureBins[index] = bins\n",
     "                else:\n",
     "                    bins = self.featureBins[index]\n",
     "                samples = np.array(pd.cut(samples,\n",
     "                     bins=bins,\n",
-    "                     labels=[\"0\", \"1\", \"2\", \"3\"]))\n",
+    "                     labels=[str(i) for i in range(10)]))\n",
     "                \n",
     "                X[:, index] = samples\n",
     "        return X\n",
@@ -815,7 +824,7 @@
     "                \n",
     "                x = samplesByClass[c][:,i]\n",
     "                if featureBins[i]==False: labels = np.unique(Xtrain[:,i])\n",
-    "                else: labels = ['0', '1', '2', '3']\n",
+    "                else: labels = [str(i) for i in range(10)]\n",
     "                probabilities[c].append(\n",
     "                     {l:P(x[x==l],x) for l in labels}\n",
     "                )\n",
@@ -834,30 +843,22 @@
     "        pred = []\n",
     "        \n",
     "        for x in Xtest:\n",
-    "            probs = {}\n",
-    "            maxProb = 0\n",
-    "            maxProbKey = ''\n",
+    "            maxProbValue = 0\n",
+    "            maxProb = ''\n",
     "            for c in self.probabilities:\n",
     "                P = self.probabilities[c]\n",
     "                prob = 1\n",
     "                for p in [ P[i] if i==0 else P[i][x[i-1]]for i in range(len(P))]:\n",
     "                    if(p!=0):\n",
     "                        prob = prob*p\n",
-    "                probs[c] = prob\n",
-    "                if prob > maxProb: \n",
-    "                    maxProb = prob\n",
-    "                    maxProbKey = c\n",
-    "            pred.append(maxProbKey)\n",
+    "                        \n",
+    "                if prob > maxProbValue: \n",
+    "                    maxProbValue = prob\n",
+    "                    maxProb = c\n",
+    "            pred.append(maxProb)\n",
     "            \n",
     "        return pred"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
