Modelo probabilístico Naive Bayes

--- a/Mini Weka.ipynb
+++ b/Mini Weka.ipynb
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,6 +744,9 @@
     "import math\n",
     "\n",
     "class NaiveBayes(object):\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.n_feature = None\n",
     "    \n",
     "    def calculate_probability(self, x, mean, stdev):\n",
     "        return (1 / (math.sqrt(2*math.pi) * stdev)) * math.exp(-(math.pow(x-mean,2)/(2*math.pow(stdev,2))))\n",
@@ -764,13 +767,14 @@
     "    def summarize(self, instances):\n",
     "        return [ (np.mean(instances[:,i]), np.std(instances[:,i])) for i in range(self.n_feature)]\n",
     "        \n",
-    "    def check_X_y(self, X, y, reset=False):\n",
+    "    def check_X_y(self, X, y=None, reset=False):\n",
     "        n_samples, n_feature = X.shape\n",
     "        \n",
-    "        if(n_samples != len(y)):  raise Exception('Numero diferente de dados e rótulos das amotras')\n",
+    "        if(y is not None and n_samples != len(y)):  raise Exception('Numero diferente de dados e rótulos das amotras')\n",
     "        if(reset):\n",
     "            self.n_feature = n_feature\n",
-    "        if(self.n_feature != n_feature): raise Exception(f'Número de atributos difere do cedido anteriomente: {n_feature} ao invés de {self.n_feature}')\n",
+    "        if(self.n_feature is None): raise Exception('Tente treinar o modelo primeiro')\n",
+    "        elif(self.n_feature != n_feature): raise Exception(f'Número de atributos difere do cedido anteriomente: {n_feature} ao invés de {self.n_feature}')\n",
     "        \n",
     "        \n",
     "        for i in range(n_feature):\n",
@@ -805,15 +809,9 @@
     "        return best_label\n",
     "    \n",
     "    def predict(self, X):\n",
+    "        X,_ = self.check_X_y(X)\n",
     "        return [ self._predict(sample) for sample in X]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
