--- a/Mini Weka.ipynb
+++ b/Mini Weka.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "\tclass's type is nominal, range is ('Iris-setosa', 'Iris-versicolor', 'Iris-virginica')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -134,44 +134,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>5.5</td>\n",
+       "      <th>122</th>\n",
+       "      <td>7.7</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>b'Iris-virginica'</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>5.6</td>\n",
+       "      <td>2.7</td>\n",
        "      <td>4.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>b'Iris-versicolor'</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143</th>\n",
+       "      <td>6.8</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>b'Iris-virginica'</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>1.4</td>\n",
        "      <td>0.2</td>\n",
        "      <td>b'Iris-setosa'</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>88</th>\n",
-       "      <td>5.6</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.1</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>b'Iris-versicolor'</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>147</th>\n",
-       "      <td>6.5</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.2</td>\n",
-       "      <td>2.0</td>\n",
+       "      <th>125</th>\n",
+       "      <td>7.2</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.8</td>\n",
        "      <td>b'Iris-virginica'</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>124</th>\n",
-       "      <td>6.7</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>5.7</td>\n",
-       "      <td>2.1</td>\n",
-       "      <td>b'Iris-virginica'</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>91</th>\n",
-       "      <td>6.1</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>b'Iris-versicolor'</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -179,14 +179,14 @@
       ],
       "text/plain": [
        "     sepallength  sepalwidth  petallength  petalwidth               class\n",
-       "33           5.5         4.2          1.4         0.2      b'Iris-setosa'\n",
-       "88           5.6         3.0          4.1         1.3  b'Iris-versicolor'\n",
-       "147          6.5         3.0          5.2         2.0   b'Iris-virginica'\n",
-       "124          6.7         3.3          5.7         2.1   b'Iris-virginica'\n",
-       "91           6.1         3.0          4.6         1.4  b'Iris-versicolor'"
+       "122          7.7         2.8          6.7         2.0   b'Iris-virginica'\n",
+       "94           5.6         2.7          4.2         1.3  b'Iris-versicolor'\n",
+       "143          6.8         3.2          5.9         2.3   b'Iris-virginica'\n",
+       "1            4.9         3.0          1.4         0.2      b'Iris-setosa'\n",
+       "125          7.2         3.2          6.0         1.8   b'Iris-virginica'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -237,42 +237,42 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>53</th>\n",
-       "      <td>5.5</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>4.0</td>\n",
+       "      <th>77</th>\n",
+       "      <td>6.7</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>Iris-versicolor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>5.8</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Iris-versicolor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>6.6</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>4.6</td>\n",
        "      <td>1.3</td>\n",
        "      <td>Iris-versicolor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>6.3</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>Iris-virginica</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54</th>\n",
-       "      <td>6.5</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>Iris-versicolor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>131</th>\n",
-       "      <td>7.9</td>\n",
-       "      <td>3.8</td>\n",
+       "      <th>132</th>\n",
        "      <td>6.4</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>2.2</td>\n",
        "      <td>Iris-virginica</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>5.7</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.2</td>\n",
+       "      <th>90</th>\n",
+       "      <td>5.5</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>4.4</td>\n",
        "      <td>1.2</td>\n",
        "      <td>Iris-versicolor</td>\n",
        "    </tr>\n",
@@ -282,14 +282,14 @@
       ],
       "text/plain": [
        "     sepallength  sepalwidth  petallength  petalwidth            class\n",
-       "53           5.5         2.3          4.0         1.3  Iris-versicolor\n",
-       "100          6.3         3.3          6.0         2.5   Iris-virginica\n",
-       "54           6.5         2.8          4.6         1.5  Iris-versicolor\n",
-       "131          7.9         3.8          6.4         2.0   Iris-virginica\n",
-       "95           5.7         3.0          4.2         1.2  Iris-versicolor"
+       "77           6.7         3.0          5.0         1.7  Iris-versicolor\n",
+       "67           5.8         2.7          4.1         1.0  Iris-versicolor\n",
+       "58           6.6         2.9          4.6         1.3  Iris-versicolor\n",
+       "132          6.4         2.8          5.6         2.2   Iris-virginica\n",
+       "90           5.5         2.6          4.4         1.2  Iris-versicolor"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
        "\tplay's type is nominal, range is ('yes', 'no')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -378,10 +378,18 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>9</th>\n",
+       "      <td>b'rainy'</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>b'FALSE'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
        "      <td>b'overcast'</td>\n",
-       "      <td>83.0</td>\n",
-       "      <td>86.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>75.0</td>\n",
        "      <td>b'FALSE'</td>\n",
        "      <td>b'yes'</td>\n",
        "    </tr>\n",
@@ -394,28 +402,20 @@
        "      <td>b'no'</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>b'rainy'</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>b'FALSE'</td>\n",
-       "      <td>b'yes'</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>7</th>\n",
        "      <td>b'sunny'</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>b'TRUE'</td>\n",
-       "      <td>b'yes'</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>b'sunny'</td>\n",
-       "      <td>85.0</td>\n",
-       "      <td>85.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>95.0</td>\n",
        "      <td>b'FALSE'</td>\n",
        "      <td>b'no'</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>b'overcast'</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>b'TRUE'</td>\n",
+       "      <td>b'yes'</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -423,14 +423,14 @@
       ],
       "text/plain": [
        "        outlook  temperature  humidity     windy    play\n",
-       "2   b'overcast'         83.0      86.0  b'FALSE'  b'yes'\n",
+       "9      b'rainy'         75.0      80.0  b'FALSE'  b'yes'\n",
+       "12  b'overcast'         81.0      75.0  b'FALSE'  b'yes'\n",
        "13     b'rainy'         71.0      91.0   b'TRUE'   b'no'\n",
-       "4      b'rainy'         68.0      80.0  b'FALSE'  b'yes'\n",
-       "10     b'sunny'         75.0      70.0   b'TRUE'  b'yes'\n",
-       "0      b'sunny'         85.0      85.0  b'FALSE'   b'no'"
+       "7      b'sunny'         72.0      95.0  b'FALSE'   b'no'\n",
+       "6   b'overcast'         64.0      65.0   b'TRUE'  b'yes'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -481,14 +481,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>rainy</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>91.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>no</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>overcast</td>\n",
        "      <td>64.0</td>\n",
@@ -497,12 +489,28 @@
        "      <td>yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>7</th>\n",
        "      <td>sunny</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>False</td>\n",
        "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>sunny</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>rainy</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -512,28 +520,20 @@
        "      <td>False</td>\n",
        "      <td>yes</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>rainy</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     outlook  temperature  humidity  windy play\n",
-       "13     rainy         71.0      91.0   True   no\n",
-       "6   overcast         64.0      65.0   True  yes\n",
-       "1      sunny         80.0      90.0   True   no\n",
-       "4      rainy         68.0      80.0  False  yes\n",
-       "9      rainy         75.0      80.0  False  yes"
+       "    outlook  temperature  humidity  windy play\n",
+       "6  overcast         64.0      65.0   True  yes\n",
+       "7     sunny         72.0      95.0  False   no\n",
+       "0     sunny         85.0      85.0  False   no\n",
+       "3     rainy         70.0      96.0  False  yes\n",
+       "4     rainy         68.0      80.0  False  yes"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,18 +773,23 @@
     "        if(y is not None and n_samples != len(y)):  raise Exception('Numero diferente de dados e rótulos das amotras')\n",
     "        if(reset):\n",
     "            self.n_feature = n_feature\n",
+    "            self.feature_label_encoder = [None for i in range(n_feature)]\n",
     "        if(self.n_feature is None): raise Exception('Tente treinar o modelo primeiro')\n",
     "        elif(self.n_feature != n_feature): raise Exception(f'Número de atributos difere do cedido anteriomente: {n_feature} ao invés de {self.n_feature}')\n",
     "        \n",
-    "        \n",
+    "        feature_label_encoder = self.feature_label_encoder\n",
     "        for i in range(n_feature):\n",
     "            try:\n",
     "                float(X[0,i])\n",
     "            except:\n",
-    "                X[:, i] = LabelEncoder().fit_transform(X[:, i])\n",
+    "                if(feature_label_encoder[i]==None):\n",
+    "                    feature_label_encoder[i] = LabelEncoder()\n",
+    "                    feature_label_encoder[i].fit(X[:, i])\n",
+    "                X[:, i] = feature_label_encoder[i].transform(X[:,i])\n",
     "                \n",
     "        self.n_samples = n_samples\n",
     "        self.n_feature = n_feature\n",
+    "        self.feature_label_encoder = feature_label_encoder\n",
     "                \n",
     "        return X,y\n",
     "            \n",
