Árvores de decisão

--- a/Mini Weka.ipynb
+++ b/Mini Weka.ipynb
@@ -817,6 +817,20 @@
     "        X,_ = self.check_X_y(X)\n",
     "        return [ self._predict(sample) for sample in X]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Árvores de decisão <a name=\"árvores-de-decisão\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
