Modelo probabilístico Naive Bayes

--- a/Mini Weka.ipynb
+++ b/Mini Weka.ipynb
@@ -729,7 +729,21 @@
     "$$\n",
     "\n",
     "Os parâmetros do modelo são simplesmente as probabilidades posteriores $p(x_{i}\\mid c_{j})$ e as\n",
-    "probabilidades a priori $p(c_{j})$:\n",
+    "probabilidades a priori $p(c_{j})$, onde $c$ são a classes do conjunto. \n",
+    "\n",
+    "A diferença entre as diversas variações do Naive Bayes é como o modelo interpreta as probabilidades.\n",
+    "\n",
+    "### Gaussian Naive Bayes\n",
+    "\n",
+    "Neste Naive Bayes, assume-se que as probabilidade dos dados são uma distribuição Gaussiana, o que é ótimo para dados contínuos:\n",
+    "\n",
+    "$$\n",
+    "    P(x_i \\mid c) = \\frac{1}{\\sqrt{2\\pi\\sigma^2_c}} \\exp\\left(-\\frac{(x_i - \\mu_c)^2}{2\\sigma^2_c}\\right)\n",
+    "$$\n",
+    "\n",
+    "Os parametros $\\sigma_c$ e $\\mu_c$, neste contexto, são consecutivamente o desvio padrão e a média das amostras separadas pelas classes. Escolhemos esta variação pois transformar os atributos nominais categóricos em numérios contínuos tem baixo custo, assim trabalhamos com ambos os tipos sem muita dificuldade.\n",
+    "\n",
+    "A partir deste ponto, seguimos os dois passos abaixo:\n",
     "- Treinamento: calcular e armazenar os valores de probabilidades\n",
     "- Classificação de um novo exemplo: calcular as probabilidades para os atributos e classes relevante e escolher o argumento (classe) que maximiza a probabilidade posterior"
    ]
