Modelo probabilístico Naive Bayes

--- a/Mini Weka.ipynb
+++ b/Mini Weka.ipynb
@@ -741,7 +741,9 @@
     "    P(x_i \\mid c) = \\frac{1}{\\sqrt{2\\pi\\sigma^2_c}} \\exp\\left(-\\frac{(x_i - \\mu_c)^2}{2\\sigma^2_c}\\right)\n",
     "$$\n",
     "\n",
-    "Os parametros $\\sigma_c$ e $\\mu_c$, neste contexto, são consecutivamente o desvio padrão e a média das amostras separadas pelas classes. Escolhemos esta variação pois transformar os atributos nominais categóricos em numérios contínuos tem baixo custo, assim trabalhamos com ambos os tipos sem muita dificuldade.\n",
+    "Os parametros $\\sigma_c$ e $\\mu_c$, neste contexto, são consecutivamente o desvio padrão e a média dos atributos das amostras separadas por classe. \n",
+    "\n",
+    "Escolhemos esta variação pois transformar os atributos nominais categóricos em numérios contínuos tem baixo custo, assim trabalhamos com ambos os tipos sem muita dificuldade.\n",
     "\n",
     "A partir deste ponto, seguimos os dois passos abaixo:\n",
     "- Treinamento: calcular e armazenar os valores de probabilidades\n",
@@ -836,7 +838,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Árvores de decisão <a name=\"árvores-de-decisão\"></a>"
+    "## Árvores de decisão <a name=\"árvores-de-decisão\"></a>\n",
+    "\n",
+    "Árvores de decisão são métodos de aprendizado de máquinas supervisionado não-paramétricos, muito utilizados em tarefas de classificação e regressão.\n",
+    "\n",
+    "Mas de modo geral, são estruturas de dados formadas por um conjunto de elementos chamados nós, nele são guardado informaões. Além disso, toda árvore possui um nó chamado raiz, que seria o ponto de partida e ligações para outros elementos, denominados nós filhos. Esses filhos podem possuir seus próprios filhos e assim por diante. O nó que não possui filho é conhecido como nó folha. Dessa forma, uma árvore de decisão armazena regras em seus nós, e os nós folhas representam a decisão a ser tomada.\n",
+    "\n",
+    "Um exemplo de árvore de decisão para o conjunto Weather seria como abaixo:\n",
+    "<div style=\"text-align:center\">\n",
+    "    <img style=\"width:40%;\n",
+    "                height: auto\"\n",
+    "         src=\"./decision_tree.png\" />\n",
+    "</div>\n"
    ]
   },
   {
