Classe Decision Tree

--- a/Mini Weka.ipynb
+++ b/Mini Weka.ipynb
@@ -857,7 +857,142 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Node(object):\n",
+    "    def __init__(self, feature=None, threshold=None,\n",
+    "                     is_leaf=None, counts=None, left=None, right=None):\n",
+    "        super(Node, self).__init__()\n",
+    "        self.threshold = threshold\n",
+    "        self.is_leaf = is_leaf\n",
+    "        self.counts = counts\n",
+    "        self.left = left\n",
+    "        self.right = right\n",
+    "        self.feature = feature\n",
+    "\n",
+    "class DecisionTree(object):\n",
+    "    \n",
+    "    def __init__(self, max_depth, impurity_criterion = self.gini):\n",
+    "        super(DecisionTree, self).__init__()\n",
+    "        self.max_depth = max_depth\n",
+    "        self.impurity_criterion = impurity_criterion\n",
+    "    \n",
+    "    def stopping_criterion(self, n_classes, depth, max_depth):\n",
+    "        return (max_depth is not None and max_depth == depth) or (n_classes == 1)\n",
+    "    \n",
+    "    def entropy(self, data, labels):\n",
+    "        classes = np.unique(labels)\n",
+    "\n",
+    "        s = 0\n",
+    "        for c in classes:\n",
+    "        p = np.mean(labels == c)\n",
+    "        s -= p * np.log(p)\n",
+    "\n",
+    "        return s\n",
+    "\n",
+    "\n",
+    "    def gini(self, data, labels):\n",
+    "        classes = np.unique(labels)\n",
+    "\n",
+    "        s = 0\n",
+    "        for c in classes:\n",
+    "        p = np.mean(labels == c)\n",
+    "        s += p * (1 - p)\n",
+    "\n",
+    "        return s\n",
+    "    \n",
+    "    def find_cut_point(self, data, labels, impurity_criterion = self.gini):\n",
+    "        \n",
+    "        n_samples, n_features = data.shape\n",
+    "\n",
+    "        max_info_gain = np.iinfo(np.int32).min\n",
+    "        feat_id = 0\n",
+    "        best_threshold = 0\n",
+    "\n",
+    "        # pré-calculando a impureza da região atual\n",
+    "        H_parent = impurity_criterion(data, labels)\n",
+    "        # para cada um dos atributos\n",
+    "        # vamos tentar encontrar o limiar que maximiza o ganho de informação\n",
+    "        for j in range(n_features):\n",
+    "        # só nos interessa os valores ordenados únicos \n",
+    "        # do atributo j nessa região do espaço\n",
+    "        values = np.unique(data[:, j])\n",
+    "\n",
+    "        for i in range(values.shape[0] - 1):\n",
+    "            # usamos o ponto médio dos valores possíveis\n",
+    "            # como limiar candidato para o ponto de corte\n",
+    "            threshold = (values[i] + values[i + 1]) / 2.\n",
+    "\n",
+    "            mask = data[:, j] <= threshold\n",
+    "\n",
+    "            info_gain = H_parent \\\n",
+    "                      - (mask.sum() * impurity_criterion(data[mask], labels[mask]) \\\n",
+    "                      + (~mask).sum() * impurity_criterion(data[~mask], labels[~mask])) \\\n",
+    "                      / float(n_samples)\n",
+    "\n",
+    "            if max_info_gain < info_gain:\n",
+    "            best_threshold = threshold\n",
+    "            feat_id = j\n",
+    "            max_info_gain = info_gain\n",
+    "\n",
+    "        return feat_id, best_threshold\n",
+    "    \n",
+    "    def build_tree(data, labels, tree, depth = 1):\n",
+    "        classes, counts = np.unique(labels, return_counts=True)\n",
+    "        n_classes = classes.shape[0]\n",
+    "\n",
+    "        # criétio de parada\n",
+    "        if not stopping_criterion(n_classes, depth, tree.max_depth):\n",
+    "            node = Node()\n",
+    "\n",
+    "            # encontra melhor ponto de corte dado a região atual do espaço\n",
+    "            # de acordo com critério de impureza escolhido\n",
+    "            feature, threshold = find_cut_point(data, labels, \n",
+    "                                                tree.impurity_criterion)\n",
+    "\n",
+    "            # aplicando o limiar para particionar o espaço\n",
+    "            mask = data[:, feature] <= threshold\n",
+    "\n",
+    "            # contruindo árvore recursivamente para\n",
+    "            # os sub-espaço da direita e da esquerda.\n",
+    "            left = build_tree(data[mask], labels[mask], tree, depth + 1)\n",
+    "            right = build_tree(data[~mask], labels[~mask], tree, depth + 1)\n",
+    "\n",
+    "            return Node(feature=feature, threshold=threshold, left=left, right=right)\n",
+    "\n",
+    "        # calcula a quantidade de exemplos por classe nesse nó folha\n",
+    "        # e instancia um nó folha com essas quantidades, lembre-se que isso\n",
+    "        # será usado para predição. \n",
+    "        values = np.zeros(tree.n_classes)\n",
+    "        values[classes] = counts\n",
+    "        return Node(is_leaf=True, counts=values)\n",
+    "    \n",
+    "    def __recursive_predict(self, node, X):\n",
+    "\n",
+    "        if node.is_leaf:\n",
+    "            return np.zeros(X.shape[0]) + np.argmax(node.counts)\n",
+    "\n",
+    "        mask = X[:, node.feature] <= node.threshold\n",
+    "\n",
+    "        y_pred = np.zeros(X.shape[0])\n",
+    "        if mask.sum() > 0:\n",
+    "            y_pred[mask] = self.recursive_predict(node.left, X[mask])\n",
+    "\n",
+    "        if (~mask).sum() > 0:\n",
+    "            y_pred[~mask] = self.recursive_predict(node.right, X[~mask])\n",
+    "\n",
+    "        return y_pred\n",
+    "\n",
+    "    def fit(self, X, y):\n",
+    "        self.classes = np.unique(y)\n",
+    "        self.n_classes = self.classes.shape[0]\n",
+    "\n",
+    "        self.root = build_tree(X, y, self)\n",
+    "\n",
+    "        return self\n",
+    "\n",
+    "    def predict(self, X):\n",
+    "        return self.__recursive_predict(self.root, X)"
+   ]
   }
  ],
  "metadata": {
