--- a/Mini Weka.ipynb
+++ b/Mini Weka.ipynb
@@ -993,6 +993,162 @@
     "    def predict(self, X):\n",
     "        return self.__recursive_predict(self.root, X)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Regras <a name=\"regras\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Rules(object):\n",
+    "    def __init__(self):\n",
+    "        self.rules = None\n",
+    "        \n",
+    "    #Transformando a base de dados numa lista dde dicionários para facilitar o treino\n",
+    "    def data_to_dicts(self, data):  \n",
+    "        D = []\n",
+    "        col = list(data.columns)\n",
+    "        for tp in data.values:\n",
+    "            d = {}\n",
+    "            for i in range(len(col)):\n",
+    "                d[col[i]] = tp[i]\n",
+    "            D.append(d)\n",
+    "        return D\n",
+    "    \n",
+    "    #Aplicando a regra na base de dados para descobrir quais tuplas são cobertas\n",
+    "    def apply_rule(self, data, R):\n",
+    "        coverage = data[:]\n",
+    "        for r in R:\n",
+    "            coverage = [i for i in coverage if i[r[0]] == r[1]]\n",
+    "        return coverage\n",
+    "    \n",
+    "    #Testando a precisão da regra\n",
+    "    def rule_accuracy(self, coverage, atr, cls):\n",
+    "        accuracy = [i for i in coverage if i[atr] == cls]\n",
+    "        return float(len(accuracy))/len(coverage), len(accuracy)\n",
+    "    \n",
+    "    #Escolhendo a melhor regra dentro de uma lista\n",
+    "    def get_best_rule(self, rules):\n",
+    "        rule = []\n",
+    "        best = []\n",
+    "        max_acc = 0\n",
+    "        max_cov = 0\n",
+    "        for r in rules:\n",
+    "            if r[2] > max_acc:\n",
+    "                max_acc = r[2]\n",
+    "                max_cov = r[3]\n",
+    "                best.append(r)\n",
+    "                \n",
+    "            elif r[2] == max_acc:\n",
+    "                if r[3] > max_cov:\n",
+    "                    best.append(r)\n",
+    "                    \n",
+    "        rule.append(best[-1])\n",
+    "        return rule\n",
+    "    \n",
+    "    #Construindo regras\n",
+    "    def build(self, instances, atrs, atr, cls):\n",
+    "        R = [] #Lista de regras\n",
+    "        accuracy = -1 #Precisão das regras geradas\n",
+    "        rule_instances = instances[::]  #Instâncias do anco de dados                             \n",
+    "        avail_attr = [a for a in atrs if a != atr] #Atributos a serem avaliados\n",
+    "        \n",
+    "        while True:\n",
+    "            all_rules = []\n",
+    "            #Para cada atributo ainda não utilizado:\n",
+    "            for A in [a for a in avail_attr if a not in [r[0] for r in R]]:\n",
+    "                #Para cada valor único deste atributo:\n",
+    "                for X in list(set([a[A] for a in rule_instances])):\n",
+    "                    \n",
+    "                    coverage = self.apply_rule(rule_instances, [[A, X]]) #Aplicar instância\n",
+    "                    accuracy = self.rule_accuracy(coverage, atr, cls) #Testar a precisão\n",
+    "                    all_rules.append([A, X, accuracy[0], accuracy[1]]) #Guardar regra\n",
+    "                    \n",
+    "            best = self.get_best_rule(all_rules) #Escolher a melhor regra gerada\n",
+    "            \n",
+    "            R.append((best[0][0], best[0][1])) #Guardar a melhor regra\n",
+    "            \n",
+    "            rule_instances = self.apply_rule(rule_instances, R) #Trocar as instâncias para melhorar a regra\n",
+    "            \n",
+    "            #Se a precisão chegar a 100% ou a regra cobrir menos de uma instância\n",
+    "            if best[0][2] == 1.0 or best[0][3] < 1: \n",
+    "                break\n",
+    "            \n",
+    "        return R, rule_instances\n",
+    "        \n",
+    "    #Treinar o modelo\n",
+    "    def train(self, data, atribute=None):\n",
+    "        if not atribute: #Se nenhum atributo foi especificado, escolher o último\n",
+    "            atribute = data.columns[-1]\n",
+    "            \n",
+    "        self.atribute = atribute #Guardado o atributo de treinamento\n",
+    "        dicts = self.data_to_dicts(data) #Gerando dicionários\n",
+    "        atributes = list(data.columns) #Listando os atributos\n",
+    "        self.order = atributes #Guardando a lista dos atributos para fazer predições\n",
+    "        classes = list(set(data[atribute])) #Listando as classes\n",
+    "        self.rules = [] #Lista de regras\n",
+    "        \n",
+    "        #Escolhendo um atributo padão\n",
+    "        m = 0\n",
+    "        self.default = None\n",
+    "        for cls in classes:\n",
+    "            aux = len([i for i in list(data[atribute]) if i == cls])\n",
+    "            if aux > m:\n",
+    "                m = aux\n",
+    "                self.default = cls\n",
+    "        #Caso um exemplo não se enquadre em nenhuma regra, será classificado como parte da classe com mais exemplos\n",
+    "        \n",
+    "        #Para cada classe:\n",
+    "        for cls in classes:\n",
+    "            instances = dicts[::] \n",
+    "            #Enquanto exestirem instâncias desta classe:\n",
+    "            while len([i for i in instances if i[atribute] == cls]) > 0:\n",
+    "                rule, covered = self.build(instances, atributes, atribute, cls) #Construir regra\n",
+    "                self.rules.append({cls:rule}) #Guardar regra\n",
+    "                instances = [i for i in instances if i not in covered] #Remover instâncias já cobertas\n",
+    "    \n",
+    "    #Escrever regras na tela\n",
+    "    def __str__(self):\n",
+    "        Rule = \"\"\n",
+    "        for rule in self.rules:\n",
+    "            k = list(rule.keys())[0]\n",
+    "            nbr = len(rule[k])        \n",
+    "            Rule += \" if \"\n",
+    "            for subrules in rule[k]:\n",
+    "                nbr -= 1\n",
+    "                Rule = Rule + str(subrules[0]) + \" = \" + subrules[1]\n",
+    "                if nbr > 0:\n",
+    "                    Rule = Rule + \"\\n\\t and \"\n",
+    "                else:\n",
+    "                    Rule = Rule + \":\\n then \" + self.atribute + \" = \" + k + \"\\n\\n\"\n",
+    "        \n",
+    "        return Rule +\" else \"+ self.default+\"\\n\"\n",
+    "            \n",
+    "    #Função de predição\n",
+    "    def predict(self, example):\n",
+    "        #Para cada regra:\n",
+    "        for rule in self.rules:\n",
+    "            cls = list(rule.keys())[0] #classe da regra\n",
+    "            flag = True #O exemplo pertence à classe cls\n",
+    "            #Para cada subregra:\n",
+    "            for subrules in rule[cls]:\n",
+    "                #Se o exemplo não obedece ela:\n",
+    "                if example[self.order.index(subrules[0])] != subrules[1]:\n",
+    "                    flag = False #O exemplo não pertence à cls\n",
+    "            #Se o exemplo pertence a cls:\n",
+    "            if flag:\n",
+    "                return cls\n",
+    "        \n",
+    "        #Caso um exemplo não se enquadre em nenhuma regra, será classificado como parte da classe com mais exemplos\n",
+    "        return self.default\n"
+   ]
   }
  ],
  "metadata": {
