--- a/Mini Weka.ipynb
+++ b/Mini Weka.ipynb
@@ -1446,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1557,7 +1557,6 @@
     "    \n",
     "    def predict(self, example):\n",
     "        point = {'unknow':[example[i] for i in range(len(example)) if i != self.pos]}\n",
-    "        print(point)\n",
     "        self.clean_cat(point)\n",
     "        v = []\n",
     "        d = []\n",
@@ -1571,7 +1570,7 @@
     "            jose.append({list(self.points[p].keys())[0]:all_dists[p]})\n",
     "        \n",
     "        jose.sort(key=lambda x: list(x.values())[0])\n",
-    "        print(jose)\n",
+    "        \n",
     "        v = jose[:self.k:]\n",
     "        \n",
     "        \n",
@@ -1586,31 +1585,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'unknow': ['young', 'myope', 'no', 'normal']}\n",
-      "[{'soft': 0.0}, {'none': 1.0}, {'hard': 1.0}, {'soft': 1.0}, {'soft': 1.0}, {'none': 1.4142135623730951}, {'none': 1.4142135623730951}, {'hard': 1.4142135623730951}, {'none': 1.4142135623730951}, {'hard': 1.4142135623730951}, {'soft': 1.4142135623730951}, {'none': 1.7320508075688772}, {'none': 1.7320508075688772}, {'none': 1.7320508075688772}, {'none': 1.7320508075688772}, {'none': 2.0}, {'none': 2.0}, {'none': 2.23606797749979}, {'hard': 2.23606797749979}, {'soft': 2.23606797749979}, {'none': 2.449489742783178}, {'none': 2.449489742783178}, {'none': 2.449489742783178}, {'none': 2.6457513110645907}]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'hard'"
+       "'soft'"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "knn = NN()\n",
-    "knn.train(contact, 3)\n",
+    "knn.train(contact, 5)\n",
     "ex = ['young','myope','no','normal','?']\n",
     "knn.predict(ex)"
    ]
@@ -1639,7 +1630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
