--- a/Mini Weka.ipynb
+++ b/Mini Weka.ipynb
@@ -1037,6 +1037,9 @@
    "source": [
     "from sklearn.preprocessing import LabelEncoder\n",
     "class GaussianBase(object):\n",
+    "    def __init__(self):\n",
+    "        self.n_feature = None\n",
+    "        \n",
     "    def check_X_y(self, X, y=None, reset=False):\n",
     "        n_samples, n_feature = X.shape\n",
     "        \n",
@@ -1117,13 +1120,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
     "import math\n",
     "\n",
     "class NaiveBayes(GaussianBase):\n",
     "    \n",
     "    def __init__(self):\n",
-    "        self.n_feature = None\n",
+    "        super().__init__()\n",
     "    \n",
     "    def calculate_probability(self, x, mean, stdev):\n",
     "        return (1 / (math.sqrt(2*math.pi) * stdev)) * math.exp(-(math.pow(x-mean,2)/(2*math.pow(stdev,2))))\n",
@@ -1641,12 +1643,12 @@
     "\n",
     "class KnnClassifier(GaussianBase):\n",
     "    def __init__(self, n_neighbors=5, distance=\"euclideana\"):\n",
+    "        super().__init__()\n",
     "        distances = {\"euclideana\":self.__euclideana, \"manhattan\":self.__manhattan, \"chebyshev\":self.__chebyshev}    \n",
     "        \n",
     "        self.n_neighbors = n_neighbors\n",
     "        self.__distance = distances[distance]\n",
     "        self.__distances = distances\n",
-    "        self.n_feature = None\n",
     "    \n",
     "    def __euclideana(self, x, y):\n",
     "        return sum((x - y)**2)**0.5\n",
